ecg and ppg modification

--- a/bio models analysis/Analysis.ipynb
+++ b/bio models analysis/Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,11 +151,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('flops and size.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Send Size (KB)</th>\n",
+       "      <th>Mega FLOPs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ECG</th>\n",
+       "      <td>187.473633</td>\n",
+       "      <td>1.409536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PPG</th>\n",
+       "      <td>187.473633</td>\n",
+       "      <td>1.409536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ECG_PPG</th>\n",
+       "      <td>187.543945</td>\n",
+       "      <td>1.483264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fusion</th>\n",
+       "      <td>347.895508</td>\n",
+       "      <td>2.791936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ECG (Slipt)</th>\n",
+       "      <td>91.051758</td>\n",
+       "      <td>1.409536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PPG (Slipt)</th>\n",
+       "      <td>91.051758</td>\n",
+       "      <td>1.409536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ECG_PPG (Slipt)</th>\n",
+       "      <td>91.051758</td>\n",
+       "      <td>1.483264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fusion (Slipt)</th>\n",
+       "      <td>155.051758</td>\n",
+       "      <td>2.791936</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Send Size (KB)  Mega FLOPs\n",
+       "ECG                  187.473633    1.409536\n",
+       "PPG                  187.473633    1.409536\n",
+       "ECG_PPG              187.543945    1.483264\n",
+       "Fusion               347.895508    2.791936\n",
+       "ECG (Slipt)           91.051758    1.409536\n",
+       "PPG (Slipt)           91.051758    1.409536\n",
+       "ECG_PPG (Slipt)       91.051758    1.483264\n",
+       "Fusion (Slipt)       155.051758    2.791936"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   }
  ],
